# shoes-lite

./: Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  VLESS_REALITY_CLIENT_ANALYSIS.md
examples/: multi_hop_chain.yaml  named_certificates.yaml  reality_client.yaml  reality_vision_client.yaml  tun_vpn.yaml  vless_variants.yaml
src/: address.rs  api.rs  client_proxy_chain.rs  client_proxy_selector.rs  lib.rs  main.rs  option_util.rs  socket_util.rs  speed_limit.rs  stream_reader.rs  thread_util.rs  tls_hello_parser.rs  tls_server_handler.rs
src/config/: mod.rs  pem.rs  validate.rs
src/config/types/: client.rs  common.rs  groups.rs  mod.rs  rules.rs  server.rs
src/reality/: common.rs  mod.rs  reality_auth.rs  reality_client_connection.rs  reality_server_connection.rs  reality_server_handler.rs  reality_tls13_messages.rs
src/routing/: udp_router.rs
src/tcp/: chain_builder.rs  proxy_connector_impl.rs  socket_connector_impl.rs  tcp_client_handler_factory.rs  tcp_server.rs  tcp_server_handler_factory.rs
src/tun/: mod.rs  platform.rs  tcp_conn.rs  tcp_stack.rs  tun_server.rs  udp_manager.rs
src/vless/: mod.rs  vision_filter.rs  vision_pad.rs  vision_stream.rs  vless_server_handler.rs  vless_util.rs
tests/docker/: dest-nginx.conf  docker-compose.yml  run-e2e.sh  xray-config.json
